# crosswordsolver

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  download_wordnet.py  fly.toml  words.txt
.github/workflows/: build.yml  ci.yml  release.yml  release_cargo.yml  release_fly_app.yml
crates/crosswordsolver-jw/: Cargo.toml
crates/crosswordsolver-jw/src/: handlers.rs  index.rs  lib.rs  main.rs  rate_limit.rs
crates/crosswordsolver-jw/templates/: about_body.html  about_script.js  anagram_script.js  base.html  footer.html  header.html  manifest.webmanifest  pwa_bootstrap.js  solver_script.js  style.html  synonyms_body.html  synonyms_script.js
crates/crosswordsolver-jw/tests/: http.rs
crates/wordnet-db/: Cargo.toml  README.md
crates/wordnet-db/examples/: stats.rs
crates/wordnet-db/src/: lib.rs
crates/wordnet-db/tests/: loader.rs  open_english_wordnet.rs
crates/wordnet-db/tests/fixtures/wn/: cntlist.rev  data.adj  data.adv  data.noun  data.verb  frames.vrb  index.adj  index.adv  index.noun  index.verb
crates/wordnet-morphy/: Cargo.toml  README.md
crates/wordnet-morphy/examples/: lookup.rs
crates/wordnet-morphy/src/: lib.rs
crates/wordnet-morphy/tests/: open_english_wordnet.rs
crates/wordnet-types/: Cargo.toml  README.md
crates/wordnet-types/src/: lib.rs
scripts/: build_wordlist.py
src/: handlers.rs  index.rs  lib.rs  main.rs  rate_limit.rs
templates/: anagram_body.html  base.html  footer.html  solver_body.html  synonyms_script.js
tests/: http.rs
xtask/: Cargo.toml
xtask/src/: main.rs
