[workspace]
members = ["crates/crosswordsolver-jw", "crates/wordnet-db", "crates/wordnet-morphy", "crates/wordnet-types", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/johanneswd/crosswordsolver"
homepage = "https://github.com/johanneswd/crosswordsolver"
