[package]
name = "crosswordsolver-jw"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crosswordsolver"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros", "json"] }
bitvec = "1"
array-init = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
dashmap = "5"

[dev-dependencies]
tempfile = "3"
hyper = "1"
