[package]
name = "wordnet-db"
version.workspace = true
edition = "2024"
description = "Memory-mapped reader for prebuilt WordNet database files."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/wordnet-db"

[dependencies]
anyhow = "1"
memmap2 = "0.9"
wordnet-types = { path = "../wordnet-types", version = "0.1.3" }
